# drone_follow_offboard

./: .gitignore  TROUBLESHOOTING.md
config/: safety_limits.yaml  smart_follow_params.yaml
docs/: AI_CAMERA_TRACKING.md  CAMERA_TRACKING_QUICKSTART.md  FIXES.md  HUONG_DAN_CHUYEN_SANG_QT.md  IMPROVEMENTS.md  JITTER_CORRECTION.md  MIGRATION_QUICKSTART.md  README_REFACTOR.md  REFACTOR_COMPLETE.md  TIMESTAMP_DEBUG.md
scripts/: launch_canberra.sh  launch_debug.sh
src/drone_offboard/: CMakeLists.txt  CMakeLists_REFACTORED_EXAMPLE.txt  README.md  REFACTOR_GUIDE.md  REFACTOR_SUMMARY.md  package.xml
src/drone_offboard/include/drone_offboard/: JitterCorrection.h  ap_control.hpp  ap_follow.hpp  smart_follow_node.hpp
src/drone_offboard/include/drone_offboard/core/control/: follow_controller.hpp  yaw_controller.hpp
src/drone_offboard/include/drone_offboard/core/estimator/: target_estimator.hpp
src/drone_offboard/include/drone_offboard/core/math/: conversions.hpp
src/drone_offboard/include/drone_offboard/core/safety/: altitude_safety.hpp  emergency_controller.hpp  estimate_validator.hpp  gps_health_monitor.hpp  velocity_limiter.hpp
src/drone_offboard/include/drone_offboard/core/supervisor/: follow_supervisor.hpp
src/drone_offboard/include/drone_offboard/core/system/: follow_system.hpp  system_health.hpp
src/drone_offboard/include/drone_offboard/core/types/: common.hpp  drone_state.hpp  nav_command.hpp  parameters.hpp  target_state.hpp
src/drone_offboard/include/drone_offboard/ros2/: camera_tracking.hpp  smart_follow_node.hpp
src/drone_offboard/src/: JitterCorrection.cpp  ap_control.cpp  ap_follow.cpp  camera_to_gps_node.cpp  smart_follow_main.cpp  smart_follow_node.cpp  smart_follow_node_refactored_example.cpp
src/drone_offboard/src/core/: safety.cpp
src/drone_offboard/src/core/control/: ap_control.cpp  ap_follow.cpp  follow_controller.cpp  yaw_controller.cpp
src/drone_offboard/src/core/estimator/: target_estimator.cpp
src/drone_offboard/src/core/math/: JitterCorrection.cpp
src/drone_offboard/src/ros2/: smart_follow_node.cpp
src/drone_offboard/test/: test_smart_follow_node.cpp
src/drone_offboard/test/core/: test_follow_controller_example.cpp
src/drone_offboard/test/ros2/: test_smart_follow_node.cpp
